<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group >
        <item
            android:id="@+id/home"
            android:icon="@drawable/home_icon"
            android:title="@string/home" />
        <item
            android:id="@+id/add_tests"
            android:icon="@drawable/add_more"
            android:title="@string/add_tests" />
        <item
            android:id="@+id/payment_status"
            android:icon="@drawable/payment"
            android:title="@string/payment_status" />
        <item
            android:id="@+id/remainder"
            android:icon="@drawable/reminder"
            android:title="@string/remainder" />
    </group>

    <group>
        <item
            android:id="@+id/manuRateUs"
            android:icon="@drawable/rate_us"
            android:title="@string/rate_us" />
        <item
            android:id="@+id/share"
            android:icon="@drawable/share"
            android:title="@string/share"/>
        <item android:id="@+id/logout"
            android:icon="@drawable/logout"
            android:title="@string/log_out"/>
    </group>

</menu>