<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/menuHome"
            android:icon="@drawable/home_icon"
            android:title="@string/home" />
        <item
            android:id="@+id/menuBooking"
            android:icon="@drawable/my_bookings"
            android:title="@string/my_bookings" />
        <item
            android:id="@+id/menuReport"
            android:icon="@drawable/medical_record"
            android:title="@string/download_report" />
    </group>

    <group>
        <item
            android:id="@+id/menuRateUs"
            android:icon="@drawable/rate_us"
            android:title="@string/rate_us" />
        <item
            android:id="@+id/menuShare"
            android:icon="@drawable/share"
            android:title="@string/share" />
        <item
            android:id="@+id/menuLogout"
            android:icon="@drawable/logout"
            android:title="@string/log_out" />
    </group>

</menu>