<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_color"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_9sdp"
        android:text="@string/welcome_text1"
        android:textColor="@color/black"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_14sdp"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_14sdp"
        android:layout_marginVertical="@dimen/_5sdp"
        android:text="@string/are_you_new_here"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_14sdp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/if_you_have_an_account"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:id="@+id/tvSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />
    </LinearLayout>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_14sdp"
        android:layout_marginVertical="@dimen/_5sdp"
        app:selectionRequired="true"
        app:singleLine="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipPatient"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="@dimen/_130sdp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/patient"
            android:textAlignment="center"
            android:textColor="@color/yellow"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            app:checkedIcon="@drawable/ic_baseline_check_circle_24"
            app:checkedIconVisible="true"
            app:chipBackgroundColor="@color/white"
            app:chipMinHeight="@dimen/_29sdp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipLabOwner"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="@dimen/_130sdp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lab_owner"
            android:textAlignment="center"
            android:textColor="@color/yellow"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            app:checkedIcon="@drawable/ic_baseline_check_circle_24"
            app:checkedIconVisible="true"
            app:chipBackgroundColor="@color/white"
            app:chipMinHeight="@dimen/_29sdp" />
    </com.google.android.material.chip.ChipGroup>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape"
        android:backgroundTint="@color/white"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_7sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:backgroundTint="@color/white"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/user_name"
                        app:boxCornerRadiusBottomEnd="@dimen/_8sdp"
                        app:boxCornerRadiusBottomStart="@dimen/_8sdp"
                        app:boxCornerRadiusTopEnd="@dimen/_8sdp"
                        app:boxCornerRadiusTopStart="@dimen/_8sdp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etUserName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_baseline_account_circle_24"
                            android:drawablePadding="@dimen/_2sdp"
                            android:drawableTint="@color/yellow"
                            android:imeOptions="actionNext"
                            android:textColor="@color/black" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_14sdp"
                        android:hint="@string/email"
                        app:boxCornerRadiusBottomEnd="@dimen/_8sdp"
                        app:boxCornerRadiusBottomStart="@dimen/_8sdp"
                        app:boxCornerRadiusTopEnd="@dimen/_8sdp"
                        app:boxCornerRadiusTopStart="@dimen/_8sdp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etMail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_baseline_email_24"
                            android:drawablePadding="@dimen/_2sdp"
                            android:imeOptions="actionNext"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/black" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_14sdp"
                        android:hint="@string/password"
                        app:boxCornerRadiusBottomEnd="@dimen/_8sdp"
                        app:boxCornerRadiusBottomStart="@dimen/_8sdp"
                        app:boxCornerRadiusTopEnd="@dimen/_8sdp"
                        app:boxCornerRadiusTopStart="@dimen/_8sdp"
                        app:endIconMode="password_toggle"
                        app:endIconTint="@color/yellow">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_baseline_lock_24"
                            android:drawablePadding="@dimen/_2sdp"
                            android:imeOptions="actionNone"
                            android:inputType="textPassword"
                            android:textColor="@color/black" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilLabName"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_14sdp"
                        android:hint="@string/lab_name"
                        android:visibility="gone"
                        app:boxCornerRadiusBottomEnd="@dimen/_8sdp"
                        app:boxCornerRadiusBottomStart="@dimen/_8sdp"
                        app:boxCornerRadiusTopEnd="@dimen/_8sdp"
                        app:boxCornerRadiusTopStart="@dimen/_8sdp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etLabName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_baseline_account_circle_24"
                            android:drawablePadding="@dimen/_2sdp"
                            android:drawableTint="@color/yellow"
                            android:imeOptions="actionNext"
                            android:textColor="@color/black" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilLabAddress"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/_14sdp"
                        android:hint="@string/lab_address"
                        android:visibility="gone"
                        app:boxCornerRadiusBottomEnd="@dimen/_8sdp"
                        app:boxCornerRadiusBottomStart="@dimen/_8sdp"
                        app:boxCornerRadiusTopEnd="@dimen/_8sdp"
                        app:boxCornerRadiusTopStart="@dimen/_8sdp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etLabAddress"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_baseline_account_circle_24"
                            android:drawablePadding="@dimen/_2sdp"
                            android:drawableTint="@color/yellow"
                            android:imeOptions="actionNext"
                            android:textColor="@color/black" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginVertical="@dimen/_16sdp"
                    android:backgroundTint="@color/yellow"
                    android:padding="@dimen/_14sdp"
                    android:text="@string/sign_up"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold"
                    app:cornerRadius="@dimen/_8sdp" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>